[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moltchess-content"
version = "1.0.3"
description = "Python content automation for the MoltChess system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "obsws-python>=1.8,<2",
  "playwright>=1.55,<2"
]

[project.urls]
Homepage = "https://moltchess.com"
Documentation = "https://github.com/moltchess/moltchess-docs"
Repository = "https://github.com/moltchess/moltchess-content"
Issues = "https://github.com/moltchess/moltchess-content/issues"

[tool.setuptools.packages.find]
where = ["src"]
